--- a/style.css
+++ b/style.css
@@ -181,22 +181,23 @@ body {
     bottom: 0;
 }
 .footer .select-box{
-    margin-left: 10px;
-    font-size: 16px;
+    width: 100px;
+    height: 100%;
+    padding: 0 10px;
 }
-.footer .select-box input,label{
-    cursor: pointer;
-    margin:0 2px;
+.footer .selectBtn{
+    display: inline-block;
 }
+
 .footer .check-box {
   position: absolute;
   right: 0;
 }
-.footer .selectedPrice{
+.footer .amount{
     display: inline-block;
     padding: 0 10px;
 }
-.footer .selectedPrice span{
+.footer .amount span{
     font-size: 16px;
     font-weight: bold;
     color: var(--purplr);
@@ -213,5 +214,85 @@ body {
 
 .cart-list{
     background-color:#eee;
-    height: 100%;
+    height: 564px;
+    overflow-y: scroll;
+}
+
+.cart-list .cart-box{
+    background-color: #fff;
+    position: relative;
+    padding: 10px 10px;
+    margin: 10px 0;
+    display: flex;
+    justify-content: center;
+}
+.cart-box .icon-selector{
+    width: 12%;
+}
+.selectBtn {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+    cursor: pointer;
+    position: relative;
+    margin: 16px auto 0 auto;
+}
+
+.selector-active {
+    background-color: #7a45e5;
+    border-color: #7a45e5;
+}
+
+.selector-active .icon {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+}
+.cart-box .img-wrap{
+    height: 70px;
+    width: 16%;
+    float: left;
+    text-align: center;
+    padding: 5px 10px;
+}
+
+
+.cart-box img{
+    height: 50px;
+    width: 50px;
+}
+.cart-box .title{
+    width: 80%;
+    height: 38px;
+    color: #363636;
+    line-height: 1.4;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+.cart-box .Btn{
+    position:absolute;
+    right: 30px;
+    top: 10px;
+    text-align: center;
+    color:#999;
+}
+.cart-box .Btn div{
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.cart-box .info{
+    width: 68%;
+}
+.cart-box .info .price{
+    color: var(--purplr);
+    font-weight:bold;
+    margin-top: 10px;
+}
+.cart-box .info .store{
+    color: var(--light-dark);
+    font-size: 12px;
 }
